docs: add electro statements

--- a/docs/mathematics/probability-and-statistics/exercises/2024-2/p10.mdx
+++ b/docs/mathematics/probability-and-statistics/exercises/2024-2/p10.mdx
@@ -25,6 +25,7 @@ d) $75 \%$
 <MDXDetails>
 <summary>Solución propuesta</summary>
 
+<div className="exercise">
 Se define:
 - $P(L) = 0.3$, 
 - $P(\bar{L}) = 0.7$,
@@ -54,6 +55,7 @@ Por lo tanto
 $$
 P(L \mid FC) = \frac{0.75 \cdot 0.3}{0.365} = 0.616 = 61.6 \%
 $$
+</div>
 
 :::info 
 Si este ejercicio tiene una solución, podría estar incorrecta. Si deseas proponer una solución alternativa, manda tu solución abriendo
