--- a/docs/science/chemistry/exercises/2024-2/p30.mdx
+++ b/docs/science/chemistry/exercises/2024-2/p30.mdx
@@ -30,7 +30,18 @@ d) Sólo III
 <summary>Solución propuesta</summary>
 
 <div className="exercise">
-Aún no hay solución propuesta 🥲
+Solución propuesta por Sofi Farfán 🐒
+
+Para este ejercicio es importante notar lo siguiente:  
+i) Si Kc = Q, hay equilibro químico 
+ii) Si Q < Kc, la reacción se desplaza hacia la derecha, es decir, hacia los productos
+iii) Si Q > Kc, la reacción se desplaza hacia la izquierda, es decir, hacia los reactantes
+
+Tomando eso en cuenta, podemos notar que como Q=10 es menor a la constante Kc=14.8 dada en el enunciado, entonces la reacción se desplaza hacia los productos, por lo tanto la I) es correcta y la II) no lo es. 
+
+Por último, si Q=Kc=14.8, entonce se alcanza el equilibrio químico, por lo tanto la III) es correcta. 
+
+Finalmente la respuesta es a) I y III
 </div>
 
 :::info
